i18n: patch 23 by lech, with some modifications to tuner to make it work as xhtml.
--HG--
extra : rebase_source : ba392b0db6a61cf47c05cb9e353b1e6ca26a0fe8

--- a/ubiquity/chrome/locale/en-US/devubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/devubiquity.properties
@@ -1,1 +1,15 @@
-# This file is just a placeholder for localizations to dev tools
+############################
+# chrome://ubiquity/content/desktop-quicklaunch.xhtml
+
+ubiquity.quicklaunch.sorrymessage=Sorry, but it appears that you're not using OS X. This feature isn't available yet.
+ubiquity.quicklaunch.enabledefault=Enable Desktop QuickLaunch
+ubiquity.quicklaunch.enablerunning=Desktop QuickLaunch is already enabled.
+ubiquity.quicklaunch.enableconfirm=Desktop QuickLaunch is now enabled.
+ubiquity.quicklaunch.erorr=Ack, an error occurred. Sorry!
+
+############################
+# chrome://ubiquity/content/test.xhtml
+
+ubiquity.testsuite.testsingular=test
+ubiquity.testsuite.testplural=tests
+ubiquity.testsuite.runerror=Error running test suite: %S 
