--- a/ubiquity/chrome/locale/en-US/devubiquity.dtd
+++ b/ubiquity/chrome/locale/en-US/devubiquity.dtd
@@ -1,1 +1,31 @@
-<!-- This file is just a placeholder for localizations to dev tools -->
+<!-- Page Titles for all documents in this DTD -->
+<!ENTITY ubiquity.pagetitle.QuickLaunch "&appTitle; Desktop QuickLaunch">
+<!ENTITY ubiquity.pagetitle.TestSuite "&appTitle; Test Suite">
+<!ENTITY ubiquity.pagetitle.Tuner "&appTitle; Nountype Tuner">
+
+<!-- Desktop QuickLaunch chrome/content/desktop-quicklaunch.xhtml -->
+<!ENTITY ubiquity.quicklaunch.Header "Desktop QuickLaunch">
+<!ENTITY ubiquity.quicklaunch.ShortDesc "<strong>Desktop QuickLaunch</strong> is a very experimental feature which allows &appTitle; to be summoned outside of the browser for use anywhere on your computer.">
+<!ENTITY ubiquity.quicklaunch.LongDesc1 "Right now this feature is only supported on OS X, but we do plan to make it available on other platforms in the future.">
+<!ENTITY ubiquity.quicklaunch.LongDesc2 "To enable Desktop QuickLaunch, click the button below. Once you've enabled it, you can press option+space to invoke Ubiquity anywhere on your computer.">
+
+<!-- Test Suite chrome/content/desktop-quicklaunch.xhtml -->
+<!ENTITY ubiquity.testsuite.ShowSuccess "Show successful tests">
+<!ENTITY ubiquity.testsuite.ShowSkipped "Show skipped tests">
+<!ENTITY ubiquity.testsuite.ShowFailed "Show failed tests">
+<!ENTITY ubiquity.testsuite.TestsRunning "Tests are running...">
+
+<!-- Test Suite chrome/content/tuner.xhtml -->
+<!ENTITY ubiquity.tuner.Header "&appTitle; Nountype Tuner">
+<!ENTITY ubiquity.tuner.ShortDesc "This tuner allows you to test different inputs against the active nountypes and verify their suggestions. It is particularly helpful for developers to get a sense for how to tweak their nountype suggestions' scores. <strong>NOTE: the nountype tuner clears the <code>nounCache</code> on each run.</strong>">
+<!ENTITY ubiquity.tuner.WarningParser2 "You're not using Parser 2! The nountype tuner currently only works with Parser 2. Please <a href='chrome://ubiquity/content/settings.xhtml'>turn on Parser 2 (aka Next Generation Parser)</a>, restart Firefox, and try again.">
+<!ENTITY ubiquity.tuner.WarningGUbiquity "<code>gUbiquity</code> was not loaded properly. Most likely this means you loaded this page at the same time that you loaded the window, and this page loaded before the window chrome, in which case you can just reload this page and it should work. Otherwise, there may actually be a problem with some code.">
+<!ENTITY ubiquity.tuner.HeaderSettings "Settings">
+<!ENTITY ubiquity.tuner.OptionMaxSuggs "max suggestions per nountype:">
+<!ENTITY ubiquity.tuner.OptionAutoRun "automatically run on update">
+<!ENTITY ubiquity.tuner.OptionParserTip "uses the same parser as the current &appTitle; instance">
+<!ENTITY ubiquity.tuner.OptionGSync "sync with <code>gUbiquity</code>">
+<!ENTITY ubiquity.tuner.ButtonRun "run!">
+<!ENTITY ubiquity.tuner.HeaderSuggestions "Suggestions">
+<!ENTITY ubiquity.tuner.THeadNounType "nountype">
+<!ENTITY ubiquity.tuner.THeadSuggestion "suggestion">
