tutorial: Added the missing link as reported at http://twitter.com/powchin/status/3489214390 .

--- a/ubiquity/chrome/locale/en-US/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/en-US/aboutubiquitytutorial.properties
@@ -4,7 +4,8 @@ tutorial.fromthestart=Click Here to Start From The Beginning
 tutorial.fromthemiddle=Start from the middle:
 tutorial.howtostart=How to start Ubiquity
 tutorial.previews=Previews (Weather command)
-tutorial.suggestions=The Suggestion List (Calculate, Google)
+tutorial.abbreviations=Abbreviations (Calculate)
+tutorial.suggestions=The Suggestion List (Google)
 tutorial.selecting=Selecting, Executing (Translate, Map)
 tutorial.morecommands=How to get help and learn more commands
 
