--- a/ubiquity/chrome/locale/en-US/coreubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/coreubiquity.properties
@@ -1,3 +1,5 @@
+extensions.ubiquity@labs.mozilla.com.description=An extension that allows for the use of dynamic commands in Firefox.
+
 ############################
 # /modules/cmdmanager.js
 
