--- a/ubiquity/chrome/locale/ja/coreubiquity.properties
+++ b/ubiquity/chrome/locale/ja/coreubiquity.properties
@@ -1,4 +1,4 @@
-# This file is just a placeholder for localizations to core Ubiquity
+extensions.ubiquity@labs.mozilla.com.description=[てすと] Firefox += CLI
 
 # /modules/cmdmanager.js
 
