--- a/ubiquity/chrome/locale/en-US/coreubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/coreubiquity.properties
@@ -27,6 +27,7 @@ ubiquity.feedmanager.subscribe=Subscribe...
 ubiquity.skinsvc.saveyourskin=Save Your Skin
 ubiquity.skinsvc.installskin=Install...
 ubiquity.skinsvc.newskinfound=This page contains a Ubiquity skin. If you'd like to install the skin, please click the button to the right.
+ubiquity.skinsvc.skinchanged=Your skin has been changed!
 
 ############################
 # /modules/stylish_feed_plugin.js
