--- a/ubiquity/chrome/locale/en-US/aboutubiquity.dtd
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.dtd
@@ -201,7 +201,7 @@
 
 <!ENTITY ubiquity.localizecmd.HelpParagraph1 "This is a localization template for the &feedKey; command feed in gettext/portable object (*.po) format. Learn more about <a href='&link.gettextInfo;'>gettext on Wikipedia</a> which also contains links to other useful tools.">
 <!ENTITY ubiquity.localizecmd.HelpParagraph2 "To test this localization, save it to: &localeDir; with the name <code>&feedKey;.po</code>">
-<!ENTITY ubiquity.localizecmd.HelpParagraph3 "Make sure that &ldquo;/XY/&rdquo; correctly reflects the appropriate locale code for you language directory. If the locale code directory for your language doesn't exist, simply create it.">
+<!ENTITY ubiquity.localizecmd.HelpParagraph3 "Make sure that &ldquo;/XY/&rdquo; correctly reflects the appropriate locale code for your language. If the directory doesn't exist, simply create it.">
 
 <!-- Bug 19 Warning chrome/content/bug19warning.xhtml -->
 <!ENTITY ubiquity.bug19warning.Header "A transparent message couldn't be displayed!">
